[package]
name = "btc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
bt_bencode = "0.8.2"
bytes = "1.10.1"
futures = "0.3.31"
percent-encoding = "2.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["gzip"] }
serde = "1.0.226"
serde_derive = "1.0.226"
serde_json = "1.0.145"
serde_with = "3.14.1"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
warp = { version = "0.4.2", features = ["multipart", "server"] }
